menus done and image upload done. moving onto saving upload info to db

--- a/public/modules/imgs/views/create-imgs.client.view.html
+++ b/public/modules/imgs/views/create-imgs.client.view.html
@@ -1,1 +1,10 @@
 <h1>create</h1>
+
+<form id        =  "uploadForm"
+     enctype   =  "multipart/form-data"
+     action    =  "/imgs"
+     method    =  "post"
+>
+<input type="file" name="userPhoto" />
+<input type="submit" value="Upload Image" name="submit">
+</form>
