--- a/public/modules/imgs/views/view-imgs.client.view.html
+++ b/public/modules/imgs/views/view-imgs.client.view.html
@@ -1,1 +1,23 @@
-<h1>view</h1<>
+<section data-ng-controller="ImgsController" data-ng-init="findOne()">
+	<div class="page-header">
+		<h1 data-ng-bind="img.title"></h1>
+	</div>
+		<img class="lead" src="{{img.uri}}" />
+
+	<div class="pull-right" data-ng-show="authentication.user._id == img.user._id">
+		<a class="btn btn-primary" href="/#!/imgs/{{img._id}}/edit">
+			<i class="glyphicon glyphicon-edit"></i>
+		</a>
+		<a class="btn btn-primary" data-ng-click="remove();">
+			<i class="glyphicon glyphicon-trash"></i>
+		</a>
+	</div>
+	<small>
+		<em class="text-muted">
+			Posted on
+			<span data-ng-bind="img.created | date:'mediumDate'"></span>
+			by
+			<span data-ng-bind="img.user.displayName"></span>
+		</em>
+	</small>
+</section>
