--- a/public/modules/imgs/views/create-imgs.client.view.html
+++ b/public/modules/imgs/views/create-imgs.client.view.html
@@ -1,10 +1,24 @@
 <h1>create</h1>
 
-<form id        =  "uploadForm"
-     enctype   =  "multipart/form-data"
-     action    =  "/imgs"
-     method    =  "post"
->
-<input type="file" name="userPhoto" />
-<input type="submit" value="Upload Image" name="submit">
-</form>
+<section data-ng-controller="ImgsController">
+	<div class="page-header">
+		<h1>New Image</h1>
+	</div>
+	<div class="col-md-12">
+		<form name="imgForm" class="form-horizontal" ng-submit="create()" enctype="multipart/form-data" novalidate>
+			<fieldset>
+				<div class="form-group">
+					<label for="exampleInputFile">File input</label>
+					<input type="file" id="userPhoto" file-model="file">
+					<p class="help-block">Example block-level help text here.</p>
+				</div>
+				<div class="form-group">
+					<button type="submit" name="submit" ng-click="create()" onclick="return false;" class="btn btn-default">upload</button>
+				</div>
+				<div data-ng-show="error" class="text-danger">
+					<strong data-ng-bind="error"></strong>
+				</div>
+			</fieldset>
+		</form>
+	</div>
+</section>
