--- a/public/modules/imgs/views/edit-imgs.client.view.html
+++ b/public/modules/imgs/views/edit-imgs.client.view.html
@@ -1,1 +1,35 @@
 <h1>edit</h1>
+
+<section data-ng-controller="ImgsController" data-ng-init="findOne()">
+	<div class="page-header">
+		<h1>Edit Image</h1>
+	</div>
+	<div class="col-md-12">
+		<img data-ng-src="{{ img.uri }}" />
+		<form name="imgForm" class="form-horizontal" ng-submit="create()" enctype="multipart/form-data" novalidate>
+			<fieldset>
+				<div class="form-group">
+					<label for="exampleInputFile">File input</label>
+					<input type="file" id="userPhoto" file-model="file">
+					<p class="help-block">Example block-level help text here.</p>
+				</div>
+				<div data-ng-controller="ScrpbksController" data-ng-init="find()">
+					<div data-ng-repeat="scrpbk in scrpbks">
+						<div class="radio">
+						  <label>
+						  	<input type="radio" name="img.scrpbk_sel" data-ng-model="img.scrpbk_sel" value="{{ scrpbk._id }}">
+						    {{ scrpbk.title }}
+						  </label>
+						</div>
+					</div>
+				</div>
+				<div class="form-group">
+					<button type="submit" name="submit" ng-click="create()" onclick="return false;" class="btn btn-default">upload</button>
+				</div>
+				<div data-ng-show="error" class="text-danger">
+					<strong data-ng-bind="error"></strong>
+				</div>
+			</fieldset>
+		</form>
+	</div>
+</section>
