--- a/public/modules/scrpbks/views/view-scrpbk.client.view.html
+++ b/public/modules/scrpbks/views/view-scrpbk.client.view.html
@@ -2,13 +2,24 @@
 	<div class="page-header">
 		<h1 data-ng-bind="scrpbk.title"></h1>
 	</div>
-	<div class="pull-right" data-ng-show="authentication.user._id == scrpbk.user._id">
+	<!--<div class="pull-right" data-ng-show="authentication.user._id == scrpbk.user._id">
 		<a class="btn btn-primary" href="/#!/scrpbks/{{scrpbk._id}}/edit">
 			<i class="glyphicon glyphicon-edit"></i>
 		</a>
 		<a class="btn btn-primary" data-ng-click="remove();">
 			<i class="glyphicon glyphicon-trash"></i>
 		</a>
+	</div>-->
+	<div data-ng-controller="ImgsController" data-ng-init="findScrpbk()">
+		<ul data-ng-repeat="img in imgs">
+			<li>
+				<a data-ng-href="/#!/imgs/{{img._id}}">
+					<figure>
+						<img data-ng-src="{{img.uri}}" />
+					</figure>
+				</a>
+			</li>
+		</ul>
 	</div>
 	<small>
 		<em class="text-muted">
