--- a/public/modules/imgs/views/edit-imgs.client.view.html
+++ b/public/modules/imgs/views/edit-imgs.client.view.html
@@ -6,7 +6,7 @@
 	</div>
 	<div class="col-md-12">
 		<img data-ng-src="{{ img.uri }}" />
-		<form name="imgForm" class="form-horizontal" ng-submit="create()" enctype="multipart/form-data" novalidate>
+		<form name="imgForm" class="form-horizontal" ng-submit="update()" enctype="multipart/form-data" novalidate>
 			<fieldset>
 				<div class="form-group">
 					<label for="exampleInputFile">File input</label>
@@ -22,9 +22,18 @@
 						  </label>
 						</div>
 					</div>
+					<hr/>
+					<h3>Tags</h3>
+					<ui-select multiple tagging tagging-label="(select this tag)" sortable="true" on-select="tagUpdate($item, img, add)" ng-model="img.tags" theme="bootstrap" ng-disabled="disabled" title="Choose a person" title="Start typing a tag (use commas to seperate tags) ...">
+						<ui-select-match placeholder="Start typing a tag (use commas to seperate tags) ...">{{$item}}</ui-select-match>
+						<ui-select-choices repeat="img in img.tags">
+							{{ img }}
+						</ui-select-choices>
+					</ui-select>
+					<hr/>
 				</div>
 				<div class="form-group">
-					<button type="submit" name="submit" ng-click="create()" onclick="return false;" class="btn btn-default">upload</button>
+					<button type="submit" name="submit" ng-click="update()" onclick="return false;" class="btn btn-default">update</button>
 				</div>
 				<div data-ng-show="error" class="text-danger">
 					<strong data-ng-bind="error"></strong>
