image url screenshot & image scrape from url done

--- a/public/modules/scrpbks/views/view-scrpbk.client.view.html
+++ b/public/modules/scrpbks/views/view-scrpbk.client.view.html
@@ -10,7 +10,7 @@
 			<i class="glyphicon glyphicon-trash"></i>
 		</a>
 	</div>
-	<div data-ng-controller="ImgsController" data-ng-init="findScrpbk()">
+	<div data-ng-init="findScrpbkImgs()">
 		<ul data-ng-repeat="img in imgs">
 			<li>
 				<a data-ng-href="/#!/imgs/{{img._id}}">
