--- a/public/modules/imgs/views/captureURL-imgs.client.view.html
+++ b/public/modules/imgs/views/captureURL-imgs.client.view.html
@@ -2,14 +2,15 @@
 
 <section data-ng-controller="ImgsController">
 	<div class="page-header">
-		<h1>New Image</h1>
+		<h1>Get images from url</h1>
 	</div>
 	<div class="col-md-12">
-		<form name="imgForm" class="form-horizontal" ng-submit="grabURLImage()" novalidate>
+		<form name="imgForm" class="form-horizontal" ng-submit="" novalidate>
 			<fieldset>
 				<div class="form-group">
 					<input type="text" class="form-control" placeholder="enter url" data-ng-model="url" />
 				</div>
+				<button class="btn btn-primary" ng-click="grabImagesUrl()" onclick="return false;">Grab URL</button>
 				<div data-ng-controller="ScrpbksController" data-ng-init="find()">
 					<h3>Scrpbks</h3>
 					<div data-ng-repeat="scrpbk in scrpbks">
@@ -34,7 +35,7 @@
 					<strong data-ng-bind="error"></strong>
 				</div>
 				<div class="form-group">
-					<button type="submit" name="submit" ng-click="grabURLImage()" onclick="return false;" class="btn btn-default">upload</button>
+					<button type="submit" name="submit" ng-click="" onclick="return false;" class="btn btn-default">upload</button>
 				</div>
 			</fieldset>
 		</form>
