--- a/public/modules/scrpbks/views/edit-scrpbk.client.view.html
+++ b/public/modules/scrpbks/views/edit-scrpbk.client.view.html
@@ -26,7 +26,7 @@
 				<hr/>
 				<h3>Private Scrapbook</h3>
 				<label for="private">Make this scrapbook private:</label>
-				<switch id="private" name="private" ng-model="private" class="green"></switch>
+				<switch id="private" name="private" ng-model="scrpbk.private" class="green"></switch>
 				<div class="form-group">
 					<input type="submit" value="Update" class="btn btn-default">
 				</div>
