--- a/public/modules/scrpbks/views/list-scrpbks.client.view.html
+++ b/public/modules/scrpbks/views/list-scrpbks.client.view.html
@@ -2,17 +2,24 @@
 	<div class="page-header">
 		<h1>Scrapbooks</h1>
 	</div>
-	<div class="list-group">
-		<a data-ng-repeat="scrpbk in scrpbks" data-ng-href="#!/scrpbks/{{scrpbk._id}}" class="list-group-item">
-			<small class="list-group-item-text">
-				Posted on
-				<span data-ng-bind="scrpbk.created | date:'mediumDate'"></span>
-				by
-				<span data-ng-bind="scrpbk.user.displayName"></span>
-			</small>
-			<h4 class="list-group-item-heading" data-ng-bind="scrpbk.title"></h4>
-			<p class="list-group-item-text" data-ng-bind="scrpbk.content"></p>
-		</a>
+	<div class="row">
+	  	<a data-ng-repeat="scrpbk in scrpbks" data-ng-href="#!/scrpbks/{{scrpbk._id}}" class="col-sm-6 col-md-4">
+	    	<div class="thumbnail">
+				<figure data-ng-init="findPrevImgs(scrpbk._id)">
+					<img class="img-responsive" class="img-thumbnail" data-ng-src="{{imgs[scrpbk._id][0].uri}}" />
+				</figure>
+	      		<div class="caption">
+	        		<h3 data-ng-bind="scrpbk.title"></h3>
+	        		<p data-ng-bind="scrpbk.content"></p>
+	        		<small class="list-group-item-text">
+						Posted on
+						<span data-ng-bind="scrpbk.created | date:'mediumDate'"></span>
+						by
+						<span data-ng-bind="scrpbk.user.displayName"></span>
+					</small>
+	      		</div>
+	    	</div>
+	  	</a>
 	</div>
 	<div class="alert alert-warning text-center" data-ng-if="scrpbks.$resolved && !scrpbks.length">
 		No scrapbooks yet, why don't you <a href="/#!/scrpbks/create">create one</a>?
